--- a/PredictingTitanicSurvivors.ipynb
+++ b/PredictingTitanicSurvivors.ipynb
@@ -30,7 +30,7 @@
    "id": "3e3eb3c4",
    "metadata": {},
    "source": [
-    "#### Part 1: EDA\n",
+    "### Part 1: EDA\n",
     "\n",
     "#### 1-1. Getting started"
    ]
@@ -906,7 +906,7 @@
    "id": "3aab0d6e",
    "metadata": {},
    "source": [
-    "#### Part 2: Test hypothesis\n",
+    "### Part 2: Test hypothesis\n",
     "- hypothesis: if the passanger is female, they will survive.\n",
     "\n",
     "\n",
@@ -1016,7 +1016,7 @@
    "id": "4fb1eb2e",
    "metadata": {},
    "source": [
-    "#### Part 3: Clean data\n",
+    "### Part 3: Clean data\n",
     "- 0: Male\n",
     "- 1: Female\n",
     "\n",
@@ -1055,7 +1055,7 @@
    "id": "72fc99ca",
    "metadata": {},
    "source": [
-    "#### Part 4. Predict Logistic Regression"
+    "### Part 4. Predict Logistic Regression"
    ]
   },
   {
@@ -1335,7 +1335,7 @@
    "id": "b92b3bcb",
    "metadata": {},
    "source": [
-    "#### Part 5. Predict Decision Tree"
+    "### Part 5. Predict Decision Tree"
    ]
   },
   {
